parsers/logicParser.py
# Generated from /run/media/maxime/Documents/_ENS/M1_philo/thmodele/exttarski/logic.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class logicParser ( Parser ):

    grammarFileName = "logic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/\\'", "'\\/'", "'True'", "'False'", 
                     "'not'", "'forall'", "'there exists'", "';'", "','", 
                     "':'", "'('", "')'", "'='", "'!='", "'<='", "'<'", 
                     "'>'", "'>='", "'+'", "'-'", "'*'", "'^'", "'/'", "'mod'", 
                     "'import'" ]

    symbolicNames = [ "<INVALID>", "LAND", "LOR", "TRUE", "FALSE", "NOT", 
                      "FORALL", "EXISTS", "SEMICOL", "COMMA", "COLUMN", 
                      "LPAR", "RPAR", "EQ", "NEQ", "LEQ", "LT", "GT", "GTEQ", 
                      "PLUS", "MINUS", "MULT", "POWER", "DIV", "MOD", "IMPORT", 
                      "INT", "VARNAME", "TYPE", "PARAMS", "PATHSTR", "SPACE", 
                      "OTHER" ]

    RULE_programm = 0
    RULE_prog = 1
    RULE_model_definition = 2
    RULE_formula_list = 3
    RULE_formula = 4
    RULE_expr = 5
    RULE_atomexpr = 6
    RULE_atom = 7

    ruleNames =  [ "programm", "prog", "model_definition", "formula_list", 
                   "formula", "expr", "atomexpr", "atom" ]

    EOF = Token.EOF
    LAND=1
    LOR=2
    TRUE=3
    FALSE=4
    NOT=5
    FORALL=6
    EXISTS=7
    SEMICOL=8
    COMMA=9
    COLUMN=10
    LPAR=11
    RPAR=12
    EQ=13
    NEQ=14
    LEQ=15
    LT=16
    GT=17
    GTEQ=18
    PLUS=19
    MINUS=20
    MULT=21
    POWER=22
    DIV=23
    MOD=24
    IMPORT=25
    INT=26
    VARNAME=27
    TYPE=28
    PARAMS=29
    PATHSTR=30
    SPACE=31
    OTHER=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrammContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prog(self):
            return self.getTypedRuleContext(logicParser.ProgContext,0)


        def EOF(self):
            return self.getToken(logicParser.EOF, 0)

        def getRuleIndex(self):
            return logicParser.RULE_programm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramm" ):
                return visitor.visitProgramm(self)
            else:
                return visitor.visitChildren(self)




    def programm(self):

        localctx = logicParser.ProgrammContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.prog()
            self.state = 17
            self.match(logicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def model_definition(self):
            return self.getTypedRuleContext(logicParser.Model_definitionContext,0)


        def prog(self):
            return self.getTypedRuleContext(logicParser.ProgContext,0)


        def formula_list(self):
            return self.getTypedRuleContext(logicParser.Formula_listContext,0)


        def getRuleIndex(self):
            return logicParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = logicParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog)
        try:
            self.state = 27
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.model_definition()
                self.state = 20
                self.prog()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 22
                self.formula_list()
                self.state = 23
                self.prog()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                self.formula_list()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 26
                self.model_definition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Model_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return logicParser.RULE_model_definition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ImportModelContext(Model_definitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.Model_definitionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IMPORT(self):
            return self.getToken(logicParser.IMPORT, 0)
        def PATHSTR(self):
            return self.getToken(logicParser.PATHSTR, 0)
        def SEMICOL(self):
            return self.getToken(logicParser.SEMICOL, 0)
        def COMMA(self):
            return self.getToken(logicParser.COMMA, 0)
        def PARAMS(self):
            return self.getToken(logicParser.PARAMS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportModel" ):
                return visitor.visitImportModel(self)
            else:
                return visitor.visitChildren(self)



    def model_definition(self):

        localctx = logicParser.Model_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_model_definition)
        self._la = 0 # Token type
        try:
            localctx = logicParser.ImportModelContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(logicParser.IMPORT)
            self.state = 30
            self.match(logicParser.PATHSTR)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==logicParser.COMMA:
                self.state = 31
                self.match(logicParser.COMMA)
                self.state = 32
                self.match(logicParser.PARAMS)


            self.state = 35
            self.match(logicParser.SEMICOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Formula_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return logicParser.RULE_formula_list

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FormulaListLastContext(Formula_listContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.Formula_listContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(logicParser.FormulaContext,0)

        def SEMICOL(self):
            return self.getToken(logicParser.SEMICOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaListLast" ):
                return visitor.visitFormulaListLast(self)
            else:
                return visitor.visitChildren(self)


    class FormulaListBodyContext(Formula_listContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.Formula_listContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(logicParser.FormulaContext,0)

        def SEMICOL(self):
            return self.getToken(logicParser.SEMICOL, 0)
        def formula_list(self):
            return self.getTypedRuleContext(logicParser.Formula_listContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaListBody" ):
                return visitor.visitFormulaListBody(self)
            else:
                return visitor.visitChildren(self)



    def formula_list(self):

        localctx = logicParser.Formula_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formula_list)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = logicParser.FormulaListBodyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.formula(0)
                self.state = 38
                self.match(logicParser.SEMICOL)
                self.state = 39
                self.formula_list()
                pass

            elif la_ == 2:
                localctx = logicParser.FormulaListLastContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.formula(0)
                self.state = 42
                self.match(logicParser.SEMICOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return logicParser.RULE_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FormulaQforallContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FORALL(self):
            return self.getToken(logicParser.FORALL, 0)
        def VARNAME(self):
            return self.getToken(logicParser.VARNAME, 0)
        def COMMA(self):
            return self.getToken(logicParser.COMMA, 0)
        def formula(self):
            return self.getTypedRuleContext(logicParser.FormulaContext,0)

        def COLUMN(self):
            return self.getToken(logicParser.COLUMN, 0)
        def TYPE(self):
            return self.getToken(logicParser.TYPE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaQforall" ):
                return visitor.visitFormulaQforall(self)
            else:
                return visitor.visitChildren(self)


    class FormulaLandContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicParser.FormulaContext)
            else:
                return self.getTypedRuleContext(logicParser.FormulaContext,i)

        def LAND(self):
            return self.getToken(logicParser.LAND, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaLand" ):
                return visitor.visitFormulaLand(self)
            else:
                return visitor.visitChildren(self)


    class FormulaExprContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(logicParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaExpr" ):
                return visitor.visitFormulaExpr(self)
            else:
                return visitor.visitChildren(self)


    class FormulaLorContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicParser.FormulaContext)
            else:
                return self.getTypedRuleContext(logicParser.FormulaContext,i)

        def LOR(self):
            return self.getToken(logicParser.LOR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaLor" ):
                return visitor.visitFormulaLor(self)
            else:
                return visitor.visitChildren(self)


    class FormulaAtomContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(logicParser.AtomContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaAtom" ):
                return visitor.visitFormulaAtom(self)
            else:
                return visitor.visitChildren(self)


    class FormulaQexistsContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXISTS(self):
            return self.getToken(logicParser.EXISTS, 0)
        def VARNAME(self):
            return self.getToken(logicParser.VARNAME, 0)
        def COMMA(self):
            return self.getToken(logicParser.COMMA, 0)
        def formula(self):
            return self.getTypedRuleContext(logicParser.FormulaContext,0)

        def COLUMN(self):
            return self.getToken(logicParser.COLUMN, 0)
        def TYPE(self):
            return self.getToken(logicParser.TYPE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaQexists" ):
                return visitor.visitFormulaQexists(self)
            else:
                return visitor.visitChildren(self)


    class FormulaNotContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(logicParser.NOT, 0)
        def atom(self):
            return self.getTypedRuleContext(logicParser.AtomContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulaNot" ):
                return visitor.visitFormulaNot(self)
            else:
                return visitor.visitChildren(self)



    def formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = logicParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_formula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = logicParser.FormulaQforallContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 47
                self.match(logicParser.FORALL)
                self.state = 48
                self.match(logicParser.VARNAME)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==logicParser.COLUMN:
                    self.state = 49
                    self.match(logicParser.COLUMN)
                    self.state = 50
                    self.match(logicParser.TYPE)


                self.state = 53
                self.match(logicParser.COMMA)
                self.state = 54
                self.formula(7)
                pass

            elif la_ == 2:
                localctx = logicParser.FormulaQexistsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 55
                self.match(logicParser.EXISTS)
                self.state = 56
                self.match(logicParser.VARNAME)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==logicParser.COLUMN:
                    self.state = 57
                    self.match(logicParser.COLUMN)
                    self.state = 58
                    self.match(logicParser.TYPE)


                self.state = 61
                self.match(logicParser.COMMA)
                self.state = 62
                self.formula(6)
                pass

            elif la_ == 3:
                localctx = logicParser.FormulaExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 63
                self.expr(0)
                pass

            elif la_ == 4:
                localctx = logicParser.FormulaNotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 64
                self.match(logicParser.NOT)
                self.state = 65
                self.atom()
                pass

            elif la_ == 5:
                localctx = logicParser.FormulaAtomContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 66
                self.atom()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 75
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = logicParser.FormulaLandContext(self, logicParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 69
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 70
                        self.match(logicParser.LAND)
                        self.state = 71
                        self.formula(6)
                        pass

                    elif la_ == 2:
                        localctx = logicParser.FormulaLorContext(self, logicParser.FormulaContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 72
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 73
                        self.match(logicParser.LOR)
                        self.state = 74
                        self.formula(5)
                        pass

             
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return logicParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PowerExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(logicParser.ExprContext,0)

        def POWER(self):
            return self.getToken(logicParser.POWER, 0)
        def atomexpr(self):
            return self.getTypedRuleContext(logicParser.AtomexprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowerExpr" ):
                return visitor.visitPowerExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryMinusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(logicParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(logicParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryMinusExpr" ):
                return visitor.visitUnaryMinusExpr(self)
            else:
                return visitor.visitChildren(self)


    class AtomExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atomexpr(self):
            return self.getTypedRuleContext(logicParser.AtomexprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExpr" ):
                return visitor.visitAtomExpr(self)
            else:
                return visitor.visitChildren(self)


    class AdditiveExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.ExprContext
            super().__init__(parser)
            self.myop = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicParser.ExprContext)
            else:
                return self.getTypedRuleContext(logicParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(logicParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(logicParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditiveExpr" ):
                return visitor.visitAdditiveExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelationalExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.ExprContext
            super().__init__(parser)
            self.myop = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicParser.ExprContext)
            else:
                return self.getTypedRuleContext(logicParser.ExprContext,i)

        def GT(self):
            return self.getToken(logicParser.GT, 0)
        def LT(self):
            return self.getToken(logicParser.LT, 0)
        def GTEQ(self):
            return self.getToken(logicParser.GTEQ, 0)
        def LEQ(self):
            return self.getToken(logicParser.LEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self)
            else:
                return visitor.visitChildren(self)


    class MultiplicativeExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.ExprContext
            super().__init__(parser)
            self.myop = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(logicParser.ExprContext,0)

        def atomexpr(self):
            return self.getTypedRuleContext(logicParser.AtomexprContext,0)

        def MULT(self):
            return self.getToken(logicParser.MULT, 0)
        def DIV(self):
            return self.getToken(logicParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicativeExpr" ):
                return visitor.visitMultiplicativeExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqualityExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.ExprContext
            super().__init__(parser)
            self.myop = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicParser.ExprContext)
            else:
                return self.getTypedRuleContext(logicParser.ExprContext,i)

        def EQ(self):
            return self.getToken(logicParser.EQ, 0)
        def NEQ(self):
            return self.getToken(logicParser.NEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualityExpr" ):
                return visitor.visitEqualityExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = logicParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [logicParser.MINUS]:
                localctx = logicParser.UnaryMinusExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 81
                self.match(logicParser.MINUS)
                self.state = 82
                self.expr(7)
                pass
            elif token in [logicParser.LPAR, logicParser.INT, logicParser.VARNAME]:
                localctx = logicParser.AtomExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 83
                self.atomexpr()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 101
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = logicParser.AdditiveExprContext(self, logicParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 86
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 87
                        localctx.myop = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==logicParser.PLUS or _la==logicParser.MINUS):
                            localctx.myop = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 88
                        self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = logicParser.RelationalExprContext(self, logicParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 89
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 90
                        localctx.myop = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logicParser.LEQ) | (1 << logicParser.LT) | (1 << logicParser.GT) | (1 << logicParser.GTEQ))) != 0)):
                            localctx.myop = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 91
                        self.expr(5)
                        pass

                    elif la_ == 3:
                        localctx = logicParser.EqualityExprContext(self, logicParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 92
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 93
                        localctx.myop = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==logicParser.EQ or _la==logicParser.NEQ):
                            localctx.myop = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 94
                        self.expr(4)
                        pass

                    elif la_ == 4:
                        localctx = logicParser.MultiplicativeExprContext(self, logicParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 95
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 96
                        localctx.myop = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==logicParser.MULT or _la==logicParser.DIV):
                            localctx.myop = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 97
                        self.atomexpr()
                        pass

                    elif la_ == 5:
                        localctx = logicParser.PowerExprContext(self, logicParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 98
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 99
                        self.match(logicParser.POWER)
                        self.state = 100
                        self.atomexpr()
                        pass

             
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AtomexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return logicParser.RULE_atomexpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AtomExprIntContext(AtomexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.AtomexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(logicParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExprInt" ):
                return visitor.visitAtomExprInt(self)
            else:
                return visitor.visitChildren(self)


    class AtomxprParContext(AtomexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.AtomexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAR(self):
            return self.getToken(logicParser.LPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(logicParser.ExprContext,0)

        def RPAR(self):
            return self.getToken(logicParser.RPAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomxprPar" ):
                return visitor.visitAtomxprPar(self)
            else:
                return visitor.visitChildren(self)


    class AtomExprVarContext(AtomexprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a logicParser.AtomexprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARNAME(self):
            return self.getToken(logicParser.VARNAME, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExprVar" ):
                return visitor.visitAtomExprVar(self)
            else:
                return visitor.visitChildren(self)



    def atomexpr(self):
